--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,11 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "facebook/php-business-sdk": "^20.0",
-        "googleads/google-ads-php": "^23.1",
-        "inertiajs/inertia-laravel": "^1.3",
-        "laravel/framework": "^11.9",
-        "laravel/sanctum": "^4.0",
-        "laravel/telescope": "^5.1",
-        "laravel/tinker": "^2.9"
+        "php": "^8.3 || 8.4",
+        "inertiajs/inertia-laravel": "^2.1.7",
+        "laravel/framework": "^12.30.0",
+        "laravel/sanctum": "^4.2.0",
+        "laravel/telescope": "^5.11.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -20,7 +17,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "pestphp/pest": "^4.1"
     },
     "autoload": {
         "psr-4": {
