--- a/package.json
+++ b/package.json
@@ -6,21 +6,19 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.7.2",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.3"
+        "axios": "^1.12.2",
+        "laravel-vite-plugin": "^2.0",
+        "vite": "^7.1"
     },
     "dependencies": {
-        "@inertiajs/react": "^1.2.0",
-        "@tabler/icons-react": "^3.6.0",
-        "@vitejs/plugin-react": "^4.3.1",
-        "antd": "^5.18.3",
-        "dayjs": "^1.11.11",
+        "@inertiajs/react": "^2.1.7",
+        "@tabler/icons-react": "^3.35.0",
+        "@vitejs/plugin-react": "^5.0.3",
+        "antd": "^5.27.4",
+        "dayjs": "^1.11.18",
         "lodash": "^4.17.21",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "recharts": "^2.12.7",
-        "sass": "^1.77.6",
-        "uuid": "^10.0.0"
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "recharts": "^3.2.1"
     }
 }
